force-app/main/default/objects/OMP_Renewal__c/OMP_Renewal__c.object-meta.xml
<CustomObject>
    <description>VendorPulse renewal tracker - replaces manual Excel. Tracks all IT renewal transactions with 90-day hygiene alerts.</description>
    <label>Renewal</label>
    <nameField>
        <label>Renewal Name</label>
        <type>AutoNumber</type>
        <displayFormat>REN-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Renewals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>