force-app/main/default/objects/OMP_Renewal__c/fields/ACV_USD__c.field-meta.xml
<CustomField>
    <fullName>ACV_USD__c</fullName>
    <label>Annual value (ACV USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>