force-app/main/default/objects/OMP_Renewal__c/fields/Alert_Sent_30__c.field-meta.xml
<CustomField>
    <fullName>Alert_Sent_30__c</fullName>
    <label>30-day alert sent</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>