force-app/main/default/objects/OMP_Renewal__c/fields/Alert_Sent_90__c.field-meta.xml
<CustomField>
    <fullName>Alert_Sent_90__c</fullName>
    <label>90-day alert sent</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>