force-app/main/default/objects/OMP_Renewal__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>IT&amp;T</fullName><default>true</default><label>IT&amp;T</label></value>
            <value><fullName>License</fullName><default>false</default><label>License</label></value>
            <value><fullName>AMC</fullName><default>false</default><label>AMC</label></value>
            <value><fullName>Services</fullName><default>false</default><label>Services</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>