force-app/main/default/objects/OMP_Renewal__c/fields/Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Closure_Date__c</fullName>
    <label>Closure date (next renewal)</label>
    <type>Date</type>
</CustomField>