force-app/main/default/objects/OMP_Renewal__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>INR</fullName><default>true</default><label>INR</label></value>
            <value><fullName>USD</fullName><default>false</default><label>USD</label></value>
            <value><fullName>EUR</fullName><default>false</default><label>EUR</label></value>
            <value><fullName>GBP</fullName><default>false</default><label>GBP</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>