force-app/main/default/objects/OMP_Renewal__c/fields/Days_To_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Renewal__c</fullName>
    <label>Days to renewal</label>
    <formula>End_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>