force-app/main/default/objects/OMP_Renewal__c/fields/Due_Year__c.field-meta.xml
<CustomField>
    <fullName>Due_Year__c</fullName>
    <label>Due year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>