force-app/main/default/objects/OMP_Renewal__c/fields/Duration_Years__c.field-meta.xml
<CustomField>
    <fullName>Duration_Years__c</fullName>
    <label>Duration (years)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>