force-app/main/default/objects/OMP_Renewal__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>