force-app/main/default/objects/OMP_Renewal__c/fields/Escalation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Notes__c</fullName>
    <label>Escalation notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>