force-app/main/default/objects/OMP_Renewal__c/fields/Estimated_PO_TCV_USD__c.field-meta.xml
<CustomField>
    <fullName>Estimated_PO_TCV_USD__c</fullName>
    <label>Estimated PO amount (TCV USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>