force-app/main/default/objects/OMP_Renewal__c/fields/Hygiene_Status__c.field-meta.xml
<CustomField>
    <fullName>Hygiene_Status__c</fullName>
    <label>Hygiene status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Identified</fullName><default>true</default><label>Identified</label></value>
            <value><fullName>Engaged</fullName><default>false</default><label>Engaged</label></value>
            <value><fullName>Approval</fullName><default>false</default><label>Approval</label></value>
            <value><fullName>PR Created</fullName><default>false</default><label>PR Created</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>