force-app/main/default/objects/OMP_Renewal__c/fields/Last_Year_ACV_USD__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_ACV_USD__c</fullName>
    <label>Last year ACV (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>