force-app/main/default/objects/OMP_Renewal__c/fields/OEM__c.field-meta.xml
<CustomField>
    <fullName>OEM__c</fullName>
    <label>OEM</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>