force-app/main/default/objects/OMP_Renewal__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <label>PO number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>