force-app/main/default/objects/OMP_Renewal__c/fields/Renewal_Quote__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Quote__c</fullName>
    <label>Renewal quote</label>
    <type>TextArea</type>
</CustomField>