force-app/main/default/objects/OMP_Renewal__c/fields/Sourcing_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Buyer__c</fullName>
    <label>Sourcing buyer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Renewals (Sourcing Buyer)</relationshipLabel>
    <relationshipName>Renewals_Sourcing_Buyer</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>