force-app/main/default/objects/OMP_Renewal__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>