force-app/main/default/objects/OMP_Renewal__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <label>Vendor name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>