force-app/main/default/objects/OMP_Renewal__c/validationRules/VR_REN_01_EndDateAfterStart.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_REN_01_EndDateAfterStart</fullName>
    <active>true</active>
    <description>End date must be after start date</description>
    <errorConditionFormula>End_Date__c &lt;= Start_Date__c</errorConditionFormula>
    <errorMessage>End date must be after start date.</errorMessage>
</ValidationRule>