force-app/main/default/objects/OMP_Renewal__c/validationRules/VR_REN_02_SourcingBuyerRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_REN_02_SourcingBuyerRequired</fullName>
    <active>true</active>
    <description>Every renewal must have a sourcing buyer assigned</description>
    <errorConditionFormula>ISNULL(Sourcing_Buyer__c)</errorConditionFormula>
    <errorMessage>A sourcing buyer must be assigned to every renewal.</errorMessage>
</ValidationRule>