force-app/main/default/objects/OMP_Renewal__c/validationRules/VR_REN_04_ClosureRequiresDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_REN_04_ClosureRequiresDate</fullName>
    <active>true</active>
    <description>Closure date required when hygiene status is Closed</description>
    <errorConditionFormula>AND(ISPICKVAL(Hygiene_Status__c, "Closed"), ISBLANK(Closure_Date__c))</errorConditionFormula>
    <errorMessage>A closure date (next renewal date) is required when closing a renewal.</errorMessage>
</ValidationRule>